Added voucher validity check
