# src/app/app.routes.ts
@@ -12,6 +12,7 @@ import { LoginStatusComponent } from './pages/login-status/login-status.componen
 import { PageNotFoundComponent } from './pages/page-not-found/page-not-found.component';
 import { ResetPasswordComponent } from './pages/reset-password/reset-password.component';
 import { VoucherComponent } from './pages/voucher/voucher.component';
+import { VoucherCheckComponent } from './pages/voucher-check/voucher-check.component';
 
 export const routes: Routes = [
     { path: '', redirectTo: 'vouchers', pathMatch: 'full' },
@@ -21,6 +22,7 @@ export const routes: Routes = [
     { path: 'account/activate', title: 'Travel Agency - Account Activation', component: AccountActivationComponent },
     { path: 'password/reset', title: 'Travel Agency - Reset Password', component: ResetPasswordComponent },
     { path: 'login/oauth2/status', title: 'Travel Agency - Login Status', component: LoginStatusComponent },
+    { path: 'voucher/check', title: 'Travel Agency - Check Voucher', component: VoucherCheckComponent, canActivate: [authGuard] },
     { path: 'voucher/:voucherId', title: 'Travel Agency - Voucher', component: VoucherComponent, canActivate: [authGuard] },
     { path: 'manage', title: 'Travel Agency - Create Voucher', component: ManageVoucherComponent, canActivate: [authGuard] },
     { path: 'manage/:voucherId', title: 'Travel Agency - Update Voucher', component: ManageVoucherComponent, canActivate: [authGuard] },
